added the new cfusers and changed time range

--- a/ladder/package.json
+++ b/ladder/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ladder",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,6 @@
   "dependencies": {
     "axios": "^0.25.0",
     "mongoose": "^6.2.1"
-  }
+  },
+  "description": ""
 }
